--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "hackify",
     "version": "0.1.0",
     "private": true,
-    "description": "",
+    "description": "A small Vue.js app to replace letters with numbers.",
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build"
